--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,10 +50,22 @@ dependencies:
   
   # Image picker
   image_picker: ^1.0.4
-  
+
+  # Image editor
+  pro_image_editor: ^4.0.0
+
+  # Device info (required by pro_image_editor)
+  device_info_plus: ^10.1.0
+
+  # Vibration (also required by pro_image_editor)
+  # vibration: ^1.9.0  # Temporarily disabled due to build issues
+
+  # Mask input
+  mask_text_input_formatter: ^2.4.0
+
   # Date picker
   intl: ^0.19.0
-  
+
   # UI components
   flutter_svg: ^2.0.9
 
@@ -67,6 +79,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+
+dependency_overrides:
+  # Force newer vibration version to fix build issues
+  vibration: ^3.1.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
