--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   # Authentication
   firebase_auth: ^4.17.4
   firebase_core: ^2.24.2
+  google_sign_in: ^6.2.1
   
   # Image picker
   image_picker: ^1.0.4
@@ -79,6 +80,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
 
 dependency_overrides:
   # Force newer vibration version to fix build issues
@@ -86,6 +88,19 @@ dependency_overrides:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/barbearia.png"
+  min_sdk_android: 21 # opcional
+  windows:
+    generate: true
+    image_path: "assets/icons/barbearia.png"
+    icon_size: 48 # opcional
+  macos:
+    generate: true
+    image_path: "assets/icons/barbearia.png"
 
 # The following section is specific to Flutter packages.
 flutter:
